# rust-lambda-example

./: Cargo.toml  package.json
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
.serverless/invokeLocal/artifact/: bootstrap
src/: main.rs
