[package]
name = "rust-lambda"
version = "0.1.0"
authors = ["James Holman <jameswarringtonholman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
serde = "1.0.120"
serde_derive = "1.0.120"
simple-error = "0.2.3"
